@@ -2,7 +2,7 @@
  * Copyright (c) 2016 Network New Technologies Inc.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
- * You may not use this file except in compliance with the License.
+ * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
  *      http://www.apache.org/licenses/LICENSE-2.0
@@ -16,10 +16,8 @@
 
 package com.networknt.decrypt;
 
-import com.networknt.utility.Constants;
-import com.networknt.utility.Decryptor;
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
+import java.security.spec.KeySpec;
+import java.util.Base64;
 
 import javax.crypto.Cipher;
 import javax.crypto.SecretKey;
@@ -27,9 +25,9 @@ import javax.crypto.SecretKeyFactory;
 import javax.crypto.spec.IvParameterSpec;
 import javax.crypto.spec.PBEKeySpec;
 import javax.crypto.spec.SecretKeySpec;
-import java.security.spec.KeySpec;
 
 public class AESDecryptor implements Decryptor {
+
     private static final int ITERATIONS = 65536;
 
     private static final String STRING_ENCODING = "UTF-8";
@@ -47,16 +45,15 @@ public class AESDecryptor implements Decryptor {
 
     private Cipher cipher;
 
-    private BASE64Decoder base64Decoder;
+    private Base64.Decoder base64Decoder = Base64.getDecoder();
 
     public AESDecryptor() {
-        try
-        {
+        try {
             /* Derive the key, given password and salt. */
             SecretKeyFactory factory = SecretKeyFactory.getInstance("PBKDF2WithHmacSHA1");
             KeySpec spec;
 
-            spec = new PBEKeySpec(Constants.FRAMEWORK_NAME.toCharArray(), SALT, ITERATIONS, KEY_SIZE);
+            spec = new PBEKeySpec(getPassword(), SALT, ITERATIONS, KEY_SIZE);
             SecretKey tmp = factory.generateSecret(spec);
             secret = new SecretKeySpec(tmp.getEncoded(), "AES");
 
@@ -64,34 +61,31 @@ public class AESDecryptor implements Decryptor {
             // PKCS5Padding Indicates that the keys are padded
             cipher = Cipher.getInstance("AES/CBC/PKCS5Padding");
 
-            // For production use commons base64 encoder
-            base64Decoder = new BASE64Decoder();
-        }
-        catch (Exception e)
-        {
-            throw new RuntimeException("Unable to initialize AESDecryptor", e);
+        } catch (Exception e) {
+            throw new RuntimeException("Unable to initialize " + this.getClass().getName(), e);
         }
     }
 
     @Override
     public String decrypt(String input) {
-        if (!input.startsWith(CRYPT_PREFIX))
-        {
-            throw new RuntimeException("Unable to decrypt, input string does not start with 'CRYPT'");
+        if (!input.startsWith(CRYPT_PREFIX)) {
+            throw new RuntimeException("Unable to decrypt, input string does not start with 'CRYPT'.");
         }
 
-        try
-        {
-            byte[] data = base64Decoder.decodeBuffer(input.substring(6, input.length()));
+        try {
+            String encodedValue = input.substring(6, input.length());
+            byte[] data = base64Decoder.decode(encodedValue);
             int keylen = KEY_SIZE / 8;
             byte[] iv = new byte[keylen];
             System.arraycopy(data, 0, iv, 0, keylen);
             cipher.init(Cipher.DECRYPT_MODE, secret, new IvParameterSpec(iv));
             return new String(cipher.doFinal(data, keylen, data.length - keylen), STRING_ENCODING);
+        } catch (Exception e) {
+            throw new RuntimeException("Unable to decrypt because the decrypted password is incorrect.", e);
         }
-        catch (Exception e)
-        {
-            throw new RuntimeException("Unable to decrypt.", e);
-        }
+    }
+
+    protected char[] getPassword() {
+        return "light".toCharArray();
     }
 }
