@@ -2,7 +2,7 @@
  * Copyright (c) 2016 Network New Technologies Inc.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
- * You may not use this file except in compliance with the License.
+ * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
  *      http://www.apache.org/licenses/LICENSE-2.0
@@ -36,10 +36,13 @@ public class ServiceUtil {
      * If the configuration is a map, assume keyed by class name, with values being one of 2 options:
      *  - map: keys are field names, values are field values.
      *  - list: items are each maps of type to value, constructor is called with given set.
+     * @param something parameter that can be a string or a map.
+     * @return constructed object
+     * @throws Exception when construction fails.
      */
     public static Object construct(Object something) throws Exception {
         if (something instanceof String) {
-            return Class.forName((String)something).newInstance();
+            return Class.forName((String)something).getConstructor().newInstance();
         } else if (something instanceof Map) {
             // keys are the class name, values are the parameters.
             for (Map.Entry<String, Object> entry : ((Map<String, Object>) something).entrySet()) {
@@ -58,10 +61,10 @@ public class ServiceUtil {
      * @param clazz The class to be created.
      * @param params A map of the parameters.
      * @return An instantiated object.
-     * @throws Exception
+     * @throws Exception when constructor fails.
      */
     public static Object constructByNamedParams(Class clazz, Map params) throws Exception {
-        Object obj = clazz.newInstance();
+        Object obj = clazz.getConstructor().newInstance();
 
         Method[] allMethods = clazz.getMethods();
         for(Method method : allMethods) {
@@ -84,7 +87,7 @@ public class ServiceUtil {
      * @param clazz The class to be created.
      * @param parameters A list of single element maps of object type to value.
      * @return An instantiated parameters.
-     * @throws Exception
+     * @throws Exception when no instance can be created
      */
     public static Object constructByParameterizedConstructor(Class clazz, List parameters) throws Exception {
         // find out how many constructors this class has and match the one with the same sequence of
